--- a/ResumeApp/Views/Search/Index.cshtml
+++ b/ResumeApp/Views/Search/Index.cshtml
@@ -136,7 +136,6 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-                <button type="button" class="btn btn-primary">Enregistrer</button>
             </div>
         </div>
     </div>
@@ -161,7 +160,7 @@
         $('.navbar-nav li a.active').removeClass('active');
         $(".navbar-nav li a[href='/Search']").addClass('active');
         $("#displayFiles").load("/search/DisplayFiles");
-        $('input').iCheck('uncheck');
+       // $('input').iCheck('uncheck');
         cvFile = {};
     });
 
