--- a/ResumeApp/Views/Shared/_EmployeeLayout.cshtml
+++ b/ResumeApp/Views/Shared/_EmployeeLayout.cshtml
@@ -184,7 +184,7 @@
                         <div class="footer-distributed widget clearfix">
                             <div class="widget-title">
                                 <h3>S'inscrire</h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which one know this tricks.</p>
+                                <p>Pour nous contacter, vous pouvez remplir le formulaire ci-dessous, prendre contact directement avec l’un de nos consultants ou créer vos comptes via les espaces Candidats et Entreprises.</p>
                             </div>
 
                             <div class="footer-right">
