--- a/ResumeApp/Views/Search/Details.cshtml
+++ b/ResumeApp/Views/Search/Details.cshtml
@@ -3,7 +3,7 @@
 <div>
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FullName)
+            @Html.DisplayName("Nom Complet")
         </dt>
 
         <dd>
@@ -11,7 +11,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            @Html.DisplayName("Téléphone")
         </dt>
 
         <dd>
@@ -19,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayName("Email")
         </dt>
 
         <dd>
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Languages)
+            @Html.DisplayName("Langues")
         </dt>
         <dd>
             @foreach (var item in Model.Languages)
@@ -37,7 +37,7 @@
         </dd>
         <br />
         <dt>
-            @Html.DisplayNameFor(model => model.Countries)
+            @Html.DisplayName("Pays")
         </dt>
 
         <dd>
@@ -48,7 +48,7 @@
         </dd>
         <br />
         <dt>
-            @Html.DisplayNameFor(model => model.Tools)
+            @Html.DisplayName("Outils")
         </dt>
 
         <dd>
@@ -59,7 +59,7 @@
         </dd>
         <br />
         <dt>
-            @Html.DisplayNameFor(model => model.Skills)
+            @Html.DisplayName("Compétences")
         </dt>
 
         <dd>
@@ -70,7 +70,7 @@
         </dd>
         <br />
         <dt>
-            @Html.DisplayNameFor(model => model.Titles)
+            @Html.DisplayName("Titres")
         </dt>
 
         <dd>
