--- a/ResumeApp/Views/Shared/_AdminLayout.cshtml
+++ b/ResumeApp/Views/Shared/_AdminLayout.cshtml
@@ -136,7 +136,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class="active" href="@Url.Action("Index", "Home")">Accueil</a></li>
-                        <li><a href="@Url.Action("Mailing", "Home")">Emailing</a></li>
+                        <li><a href="@Url.Action("Mailing", "Home")">Messagerie</a></li>
                         <li><a href="@Url.Action("Index", "KnowledgeBases")">Base de Connaissance</a></li>
                         <li><a href="@Url.Action("Index", "Identity")">Utilisateurs</a></li>
                         <li><a href="@Url.Action("Index", "Roles")">Roles</a></li>
