--- a/ResumeApp/Views/Shared/_EmployeeLayout.cshtml
+++ b/ResumeApp/Views/Shared/_EmployeeLayout.cshtml
@@ -133,7 +133,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="@Url.Action("Index", "Home")">Accueil</a></li>
-                        <li><a href="@Url.Action("Mailing", "Home")">Mailing</a></li>
+                        <li><a href="@Url.Action("Mailing", "Home")">Messagerie</a></li>
                         <li><a href="@Url.Action("UploadFiles", "Home")">Upload CVs </a></li>
                         <li><a href="@Url.Action("Index", "Search")">Recherche </a></li>
                         <li><a href="@Url.Action("Index", "AdvSearch")">Recherche Avancé  </a></li>
