--- a/ResumeApp/Views/Home/OurServices.cshtml
+++ b/ResumeApp/Views/Home/OurServices.cshtml
@@ -9,11 +9,11 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="banner">
-                    <h2>Our Services</h2>
-                    <ul class="page-title-link">
+                    <h2>Nos Services</h2>
+                    @*<ul class="page-title-link">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Our Services</a></li>
-                    </ul>
+                    </ul>*@
                 </div>
             </div>
         </div>
@@ -29,8 +29,8 @@
                         <span class="icon icon-display"></span>
                     </div>
                     <div class="about-text">
-                        <h3> <a href="#">Lorem ipsum dolor. </a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ea, quis magnam deserunt. </p>
+                        <h3> <a href="#">Gestion des CV. </a></h3>
+                        <p>Affichage, téléchargement, modification des données ou suppresion, sont des fonctionnalitées inclus dans Ontomag. </p>
                     </div>
                 </div>
             </div>
@@ -40,8 +40,8 @@
                         <span class="icon icon-database"></span>
                     </div>
                     <div class="about-text">
-                        <h3> <a href="#">Lorem ipsum dolor. </a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ea, quis magnam deserunt. </p>
+                        <h3> <a href="#">Messagerie Personnalisée </a></h3>
+                        <p>Une service de messagerie adaptée qui vous aide à sélectionner les bonnes destinataires attachements. </p>
                     </div>
                 </div>
             </div>
@@ -51,8 +51,8 @@
                         <span class="icon icon-magic-wand"></span>
                     </div>
                     <div class="about-text">
-                        <h3> <a href="#">Lorem ipsum dolor. </a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ea, quis magnam deserunt. </p>
+                        <h3> <a href="#">Extraction des données </a></h3>
+                        <p>Transformer les paragraphes et textes des CVs en tableau des candidats, pour une expérience de recherche et de sélection plus fluide. </p>
                     </div>
                 </div>
             </div>
@@ -62,8 +62,8 @@
                         <span class="icon icon-cloud"></span>
                     </div>
                     <div class="about-text">
-                        <h3> <a href="#">Lorem ipsum dolor. </a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ea, quis magnam deserunt. </p>
+                        <h3> <a href="#">Service Recherche. </a></h3>
+                        <p>Multiples options de recherche qui vous assurent la rapidité et l'efficacité de vos opérations de sélection des candidats. </p>
                     </div>
                 </div>
             </div>
@@ -71,185 +71,7 @@
     </div><!-- end container -->
 </div><!-- end section -->
 
-<div id="services" class="parallax section lb">
-    <div class="container">
-        <div class="section-title text-center">
-            <h3>Our Service</h3>
-            <p class="lead">Our Service unlimited solutions to all your business needs. in the installation package we prepare search engine optimization, social media support, we provide corporate identity and graphic design services.</p>
-        </div><!-- end title -->
 
-        <div class="owl-services owl-carousel owl-theme">
-            <div class="service-widget">
-                <div class="post-media wow fadeIn">
-                    <a href="uploads/service_01.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                    <img src="uploads/service_01.jpg" alt="" class="img-responsive img-rounded">
-                </div>
-                <div class="service-dit">
-                    <h3>Smart Swatch Editions</h3>
-                    <p>Aliquam sagittis ligula et sem lacinia, ut facilisis enim sollicitudin. Proin nisi est, convallis nec purus vitae, iaculis posuere sapien. Cum sociis natoque.</p>
-                </div>
-            </div>
-            <!-- end service -->
-
-            <div class="service-widget">
-                <div class="post-media wow fadeIn">
-                    <a href="uploads/service_02.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                    <img src="uploads/service_02.jpg" alt="" class="img-responsive img-rounded">
-                </div>
-                <div class="service-dit">
-                    <h3>Web UI Kit Design</h3>
-                    <p>Duis at tellus at dui tincidunt scelerisque nec sed felis. Suspendisse id dolor sed leo rutrum euismod. Nullam vestibulum fermentum erat. It nam auctor. </p>
-                </div>
-            </div>
-            <!-- end service -->
-
-            <div class="service-widget">
-                <div class="post-media wow fadeIn">
-                    <a href="uploads/service_03.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                    <img src="uploads/service_03.jpg" alt="" class="img-responsive img-rounded">
-                </div>
-                <div class="service-dit">
-                    <h3>Mobile Optimization</h3>
-                    <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet lacus vitae massa sodales aliquam at eget quam. Integer ultricies et magna quis accumsan.</p>
-                </div>
-            </div>
-            <!-- end service -->
-
-            <div class="service-widget">
-                <div class="post-media wow fadeIn">
-                    <a href="uploads/service_04.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                    <img src="uploads/service_04.jpg" alt="" class="img-responsive img-rounded">
-                </div>
-                <div class="service-dit">
-                    <h3>Digital Design for Mac</h3>
-                    <p>Praesent in neque congue sapien lobortis faucibus id eget erat. <br>Pellentesque maximus rutrum felis. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-                </div>
-            </div>
-            <!-- end service -->
-        </div><!-- end row -->
-
-        <hr class="hr1">
-
-        <div class="text-center">
-            <a data-scroll href="#portfolio" class="btn btn-light btn-radius btn-brd">View Our Portfolio</a>
-        </div>
-    </div><!-- end container -->
-</div><!-- end section -->
-
-<div id="testimonials" class="parallax section db parallax-off" style="background-image:url('uploads/parallax_03.jpg');">
-    <div class="container">
-        <div class="section-title text-center">
-            <h3>Testimonials</h3>
-            <p class="lead">We thanks for all our awesome testimonials! There are hundreds of our happy customers! <br>Let's see what others say about GoodWEB Solutions website template!</p>
-        </div><!-- end title -->
-
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="testi-carousel owl-carousel owl-theme">
-                    <div class="testimonial clearfix">
-                        <div class="desc">
-                            <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                            <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                        </div>
-                        <div class="testi-meta">
-                            <img src="uploads/testi_01.png" alt="" class="img-responsive alignleft">
-                            <h4>James Fernando <small>- Manager of Racer</small></h4>
-                        </div>
-                        <!-- end testi-meta -->
-                    </div>
-                    <!-- end testimonial -->
-
-                    <div class="testimonial clearfix">
-                        <div class="desc">
-                            <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                            <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
-                        </div>
-                        <div class="testi-meta">
-                            <img src="uploads/testi_02.png" alt="" class="img-responsive alignleft">
-                            <h4>Jacques Philips <small>- Designer</small></h4>
-                        </div>
-                        <!-- end testi-meta -->
-                    </div>
-                    <!-- end testimonial -->
-
-                    <div class="testimonial clearfix">
-                        <div class="desc">
-                            <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                            <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                        </div>
-                        <div class="testi-meta">
-                            <img src="uploads/testi_03.png" alt="" class="img-responsive alignleft">
-                            <h4>Venanda Mercy <small>- Newyork City</small></h4>
-                        </div>
-                        <!-- end testi-meta -->
-                    </div>
-                    <!-- end testimonial -->
-                    <div class="testimonial clearfix">
-                        <div class="desc">
-                            <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                            <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                        </div>
-                        <div class="testi-meta">
-                            <img src="uploads/testi_01.png" alt="" class="img-responsive alignleft">
-                            <h4>James Fernando <small>- Manager of Racer</small></h4>
-                        </div>
-                        <!-- end testi-meta -->
-                    </div>
-                    <!-- end testimonial -->
-
-                    <div class="testimonial clearfix">
-                        <div class="desc">
-                            <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                            <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
-                        </div>
-                        <div class="testi-meta">
-                            <img src="uploads/testi_02.png" alt="" class="img-responsive alignleft">
-                            <h4>Jacques Philips <small>- Designer</small></h4>
-                        </div>
-                        <!-- end testi-meta -->
-                    </div>
-                    <!-- end testimonial -->
-
-                    <div class="testimonial clearfix">
-                        <div class="desc">
-                            <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                            <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                        </div>
-                        <div class="testi-meta">
-                            <img src="uploads/testi_03.png" alt="" class="img-responsive alignleft">
-                            <h4>Venanda Mercy <small>- Newyork City</small></h4>
-                        </div>
-                        <!-- end testi-meta -->
-                    </div><!-- end testimonial -->
-                </div><!-- end carousel -->
-            </div><!-- end col -->
-        </div><!-- end row -->
-
-        <hr class="hr1">
-
-        <div class="row logos">
-            <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                <a href="#"><img src="uploads/logo_01.png" alt="" class="img-repsonsive"></a>
-            </div>
-            <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                <a href="#"><img src="uploads/logo_02.png" alt="" class="img-repsonsive"></a>
-            </div>
-            <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                <a href="#"><img src="uploads/logo_03.png" alt="" class="img-repsonsive"></a>
-            </div>
-            <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                <a href="#"><img src="uploads/logo_04.png" alt="" class="img-repsonsive"></a>
-            </div>
-            <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                <a href="#"><img src="uploads/logo_05.png" alt="" class="img-repsonsive"></a>
-            </div>
-            <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                <a href="#"><img src="uploads/logo_06.png" alt="" class="img-repsonsive"></a>
-            </div>
-        </div><!-- end row -->
-
-    </div><!-- end container -->
-</div><!-- end section -->
 <script>
     $(document).ready(function () {
         $('.navbar-nav li a.active').removeClass('active');
