--- a/ResumeApp/Views/Shared/_Layout.cshtml
+++ b/ResumeApp/Views/Shared/_Layout.cshtml
@@ -131,12 +131,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="~/Content/siteContent/images/logos/logoONTO.png" alt="image"></a>
+                    <a class="navbar-brand" href="index.html"><img src="~/Content/siteContent/images/logos/Onto3.png" alt="image"></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="@Url.Action("Index", "Home")">Accueil</a></li>
-                        <li><a href="@Url.Action("Features", "Home")">features</a></li>
+                        @*<li><a href="@Url.Action("Features", "Home")">features</a></li>*@
                         <li><a href="@Url.Action("OurServices", "Home")">Services</a></li>
                         <li><a href="@Url.Action("AboutUs", "Home")">Qui sommes Nous</a></li>
                         <li><a href="@Url.Action("Contact", "Home")">Contact </a></li>
@@ -151,8 +151,6 @@
 
     <div>
         @RenderBody()
-
-        @*<footer class="site-footer">*@
         <footer class="footer">
             @*<p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>*@
             <div class="container">
@@ -162,8 +160,8 @@
                             <div class="widget-title">
                                 <img src="~/Content/siteContent/images/logos/logoONTO2.png" alt="" />
                             </div>
-                            <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
-                            <p>Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
+                            <p> ONTONOMIA, cabinet de recrutement et d’assistance technique, présent en France et à l’International est votre partenaire pour vous proposer des solutions RH et/ou techniques adaptés à vos besoins.</p>
+
                         </div><!-- end clearfix -->
                     </div><!-- end col -->
 
@@ -174,11 +172,10 @@
                             </div>
 
                             <ul class="footer-links hov">
-                                <li><a href="#">Home <span class="icon icon-arrow-right2"></span></a></li>
+                                <li><a href="#">Accueil<span class="icon icon-arrow-right2"></span></a></li>
                                 <li><a href="#">Blog <span class="icon icon-arrow-right2"></span></a></li>
-                                <li><a href="#">Pricing <span class="icon icon-arrow-right2"></span></a></li>
-                                <li><a href="#">About <span class="icon icon-arrow-right2"></span></a></li>
-                                <li><a href="#">Faq <span class="icon icon-arrow-right2"></span></a></li>
+                                <li><a href="#">A propos <span class="icon icon-arrow-right2"></span></a></li>
+                                <li><a href="#">FAQ <span class="icon icon-arrow-right2"></span></a></li>
                                 <li><a href="#">Contact <span class="icon icon-arrow-right2"></span></a></li>
                             </ul><!-- end links -->
                         </div><!-- end clearfix -->
@@ -188,7 +185,7 @@
                         <div class="footer-distributed widget clearfix">
                             <div class="widget-title">
                                 <h3>S'inscrire</h3>
-                                <p> ONTONOMIA, cabinet de recrutement et d’assistance technique, présent en France et à l’International est votre partenaire pour vous proposer des solutions RH et/ou techniques adaptés à vos besoins.</p>
+                                <p>Pour nous contacter, vous pouvez remplir le formulaire ci-dessous, prendre contact directement avec l’un de nos consultants ou créer vos comptes via les espaces Candidats et Entreprises.</p>
                             </div>
 
                             <div class="footer-right">
